[gd_scene load_steps=12 format=2]

[ext_resource path="res://gfx/aura.png" type="Texture" id=1]
[ext_resource path="res://scripts/player/Player.gd" type="Script" id=2]
[ext_resource path="res://gfx/lich.png" type="Texture" id=3]
[ext_resource path="res://scripts/player/Aura.gd" type="Script" id=4]
[ext_resource path="res://scenes/Health.tscn" type="PackedScene" id=5]
[ext_resource path="res://animations/player/aura/pulse.tres" type="Animation" id=6]
[ext_resource path="res://animations/player/idle.tres" type="Animation" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 71.0

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.341176 ) ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 15.0
height = 6.0

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="Player" type="KinematicBody2D" groups=["player"]]
pause_mode = 1
z_index = 4
z_as_relative = false
collision_layer = 2
collision_mask = 5
collision/safe_margin = 0.09
script = ExtResource( 2 )

[node name="Aura" type="Node2D" parent="." groups=["aura"]]
script = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="Aura"]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aura/Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Aura"]
self_modulate = Color( 1, 1, 1, 0.341176 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
hframes = 2

[node name="Tick" type="Timer" parent="Aura"]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Aura"]
anims/Pulse = ExtResource( 6 )
anims/RESET = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 2
texture = ExtResource( 3 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10 )
z_index = 3
shape = SubResource( 2 )

[node name="Health" parent="." instance=ExtResource( 5 )]
position = Vector2( 9, -34 )
max_hp = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = ExtResource( 7 )
anims/RESET = SubResource( 4 )

[connection signal="dead" from="." to="." method="_on_dead"]
[connection signal="enemy_down" from="." to="." method="_on_enemy_down"]
[connection signal="hit" from="." to="." method="_on_hit"]
[connection signal="body_entered" from="Aura/Area2D" to="Aura" method="_on_body_entered"]
[connection signal="body_exited" from="Aura/Area2D" to="Aura" method="_on_body_exited"]
[connection signal="timeout" from="Aura/Tick" to="Aura" method="_on_aura_tick"]
